src/AnalizadorSintactico/y.output
   0  $accept : prog $end

   1  prog : ID bloque
   2       | bloque

   3  bloque : LLAVEA sentencias LLAVEC
   4         | LLAVEA sentencias error
   5         | error sentencias LLAVEC
   6         | error sentencias error

   7  sentencias : sentencias sentencia
   8             | sentencia

   9  sentencia : sentencia_declarativa
  10            | sentencia_ejecutable

  11  sentencia_ejecutable : asignacion
  12                       | sentencia_return
  13                       | sentencia_print
  14                       | sentencia_if
  15                       | sentencia_while
  16                       | expresion_lambda

  17  sentencia_return : RETURN PARENTESISA lista_id PARENTESISC PUNTOCOMA
  18                   | RETURN PARENTESISA expresiones PARENTESISC PUNTOCOMA
  19                   | RETURN PARENTESISA lista_id PARENTESISC
  20                   | RETURN PARENTESISA expresiones PARENTESISC

  21  sentencia_print : PRINT PARENTESISA CADENA PARENTESISC PUNTOCOMA
  22                  | PRINT PARENTESISA expresiones PARENTESISC PUNTOCOMA
  23                  | sentencia_print_error

  24  sentencia_print_error : PRINT PARENTESISA CADENA PARENTESISC
  25                        | PRINT PARENTESISA expresiones PARENTESISC
  26                        | PRINT PARENTESISA PARENTESISC PUNTOCOMA
  27                        | PRINT PARENTESISA PARENTESISC

  28  sentencia_while : header_while DO bloque PUNTOCOMA
  29                  | sentencia_while_error

  30  header_while : WHILE PARENTESISA condicion PARENTESISC

  31  sentencia_while_error : WHILE condicion PARENTESISC DO bloque PUNTOCOMA
  32                        | WHILE PARENTESISA condicion DO bloque PUNTOCOMA
  33                        | WHILE condicion DO bloque PUNTOCOMA
  34                        | header_while bloque PUNTOCOMA
  35                        | header_while DO PUNTOCOMA

  36  sentencia_if : header_if ELSE bloque ENDIF PUNTOCOMA
  37               | header_if ENDIF PUNTOCOMA
  38               | sentencia_if_error

  39  header_if : IF PARENTESISA condicion PARENTESISC bloque

  40  sentencia_if_error : IF condicion PARENTESISC bloque ENDIF PUNTOCOMA
  41                     | IF PARENTESISA condicion bloque ENDIF PUNTOCOMA
  42                     | IF condicion bloque ENDIF PUNTOCOMA
  43                     | IF condicion PARENTESISC bloque ELSE bloque ENDIF PUNTOCOMA
  44                     | IF PARENTESISA condicion bloque ELSE bloque ENDIF PUNTOCOMA
  45                     | IF condicion bloque ELSE bloque ENDIF PUNTOCOMA
  46                     | header_if PUNTOCOMA
  47                     | header_if ELSE bloque PUNTOCOMA
  48                     | IF PARENTESISA condicion PARENTESISC ENDIF PUNTOCOMA
  49                     | IF PARENTESISA condicion PARENTESISC ELSE bloque ENDIF PUNTOCOMA
  50                     | header_if ELSE ENDIF PUNTOCOMA
  51                     | IF PARENTESISA condicion PARENTESISC ELSE ENDIF PUNTOCOMA
  52                     | header_if ELSE bloque ENDIF
  53                     | header_if ENDIF
  54                     | IF condicion PARENTESISC bloque ENDIF
  55                     | IF PARENTESISA condicion bloque ENDIF
  56                     | IF condicion bloque ENDIF
  57                     | IF condicion PARENTESISC bloque ELSE bloque ENDIF
  58                     | IF PARENTESISA condicion bloque ELSE bloque ENDIF
  59                     | IF condicion bloque ELSE bloque ENDIF
  60                     | header_if
  61                     | header_if ELSE bloque
  62                     | IF PARENTESISA condicion PARENTESISC ENDIF
  63                     | IF PARENTESISA condicion PARENTESISC ELSE bloque ENDIF
  64                     | header_if ELSE ENDIF
  65                     | IF PARENTESISA condicion PARENTESISC ELSE ENDIF

  66  condicion : expresiones MAYOR expresiones
  67            | expresiones MAYIG expresiones
  68            | expresiones MENOR expresiones
  69            | expresiones MENIG expresiones
  70            | expresiones IGIG expresiones
  71            | expresiones DIF expresiones
  72            | condicion_error

  73  condicion_error : expresiones MAYOR
  74                  | expresiones MAYIG
  75                  | expresiones MENOR
  76                  | expresiones MENIG
  77                  | expresiones IGIG
  78                  | expresiones DIF
  79                  | MAYOR expresiones
  80                  | MAYIG expresiones
  81                  | MENOR expresiones
  82                  | MENIG expresiones
  83                  | IGIG expresiones
  84                  | DIF expresiones
  85                  | expresiones

  86  asignacion : tipo ID ASIGN expresiones PUNTOCOMA
  87             | identificador ASIGN expresiones PUNTOCOMA
  88             | lista_id IGUAL lista_cte PUNTOCOMA
  89             | identificador IGUAL lista_cte PUNTOCOMA
  90             | asignacion_error

  91  asignacion_error : tipo ID ASIGN expresiones
  92                   | identificador ASIGN expresiones
  93                   | lista_id IGUAL lista_cte
  94                   | identificador IGUAL lista_cte

  95  expresiones : expresiones MAS termino
  96              | expresiones MENOS termino
  97              | expresiones AST termino
  98              | expresiones BARRA termino
  99              | termino
 100              | expresiones operador error

 101  termino : identificador
 102          | tipo_cte
 103          | llamado_funcion

 104  llamado_funcion : ID PARENTESISA parametros_reales PARENTESISC

 105  operador : MAS
 106           | MENOS
 107           | AST
 108           | BARRA

 109  sentencia_declarativa : tipo ID PUNTOCOMA
 110                        | tipo lista_id PUNTOCOMA
 111                        | funcion
 112                        | tipo ID error
 113                        | tipo lista_id error

 114  funcion : header_funcion bloque

 115  header_funcion : tipo ID PARENTESISA parametros_formales PARENTESISC
 116                 | tipo PARENTESISA parametros_formales PARENTESISC

 117  parametros_formales : parametros_formales COMA parametro_formal
 118                      | parametro_formal
 119                      | parametros_formales parametro_formal

 120  parametro_formal : CVR tipo identificador
 121                   | tipo identificador
 122                   | parametro_formal_error

 123  parametro_formal_error : tipo error
 124                         | CVR tipo
 125                         | CVR identificador
 126                         | error identificador

 127  parametros_reales : parametros_reales COMA expresiones FLECHA identificador
 128                    | expresiones FLECHA identificador
 129                    | expresiones FLECHA

 130  expresion_lambda : PARENTESISA tipo ID PARENTESISC bloque PARENTESISA identificador PARENTESISC
 131                   | PARENTESISA tipo ID PARENTESISC bloque PARENTESISA tipo_cte PARENTESISC

 132  lista_id : lista_id COMA identificador
 133           | identificador COMA identificador
 134           | lista_id_error

 135  lista_id_error : lista_id identificador
 136                 | identificador identificador

 137  lista_cte : tipo_cte
 138            | lista_cte COMA tipo_cte
 139            | lista_cte tipo_cte

 140  identificador : ID
 141                | ID PUNTO ID

 142  tipo : ULONG

 143  tipo_cte : CTE
 144           | MENOS CTE

state 0
	$accept : . prog $end  (0)

	error  shift 1
	ID  shift 2
	LLAVEA  shift 3
	.  error

	prog  goto 4
	bloque  goto 5


state 1
	bloque : error . sentencias LLAVEC  (5)
	bloque : error . sentencias error  (6)

	IF  shift 6
	PRINT  shift 7
	RETURN  shift 8
	ULONG  shift 9
	WHILE  shift 10
	ID  shift 11
	PARENTESISA  shift 12
	.  error

	sentencias  goto 13
	sentencia  goto 14
	sentencia_declarativa  goto 15
	sentencia_ejecutable  goto 16
	asignacion  goto 17
	sentencia_return  goto 18
	sentencia_print  goto 19
	sentencia_if  goto 20
	sentencia_while  goto 21
	expresion_lambda  goto 22
	lista_id  goto 23
	sentencia_print_error  goto 24
	header_while  goto 25
	sentencia_while_error  goto 26
	header_if  goto 27
	sentencia_if_error  goto 28
	tipo  goto 29
	identificador  goto 30
	asignacion_error  goto 31
	funcion  goto 32
	header_funcion  goto 33
	lista_id_error  goto 34


state 2
	prog : ID . bloque  (1)

	error  shift 1
	LLAVEA  shift 3
	.  error

	bloque  goto 35


state 3
	bloque : LLAVEA . sentencias LLAVEC  (3)
	bloque : LLAVEA . sentencias error  (4)

	IF  shift 6
	PRINT  shift 7
	RETURN  shift 8
	ULONG  shift 9
	WHILE  shift 10
	ID  shift 11
	PARENTESISA  shift 12
	.  error

	sentencias  goto 36
	sentencia  goto 14
	sentencia_declarativa  goto 15
	sentencia_ejecutable  goto 16
	asignacion  goto 17
	sentencia_return  goto 18
	sentencia_print  goto 19
	sentencia_if  goto 20
	sentencia_while  goto 21
	expresion_lambda  goto 22
	lista_id  goto 23
	sentencia_print_error  goto 24
	header_while  goto 25
	sentencia_while_error  goto 26
	header_if  goto 27
	sentencia_if_error  goto 28
	tipo  goto 29
	identificador  goto 30
	asignacion_error  goto 31
	funcion  goto 32
	header_funcion  goto 33
	lista_id_error  goto 34


state 4
	$accept : prog . $end  (0)

	$end  accept


state 5
	prog : bloque .  (2)

	.  reduce 2


state 6
	header_if : IF . PARENTESISA condicion PARENTESISC bloque  (39)
	sentencia_if_error : IF . condicion PARENTESISC bloque ENDIF PUNTOCOMA  (40)
	sentencia_if_error : IF . PARENTESISA condicion bloque ENDIF PUNTOCOMA  (41)
	sentencia_if_error : IF . condicion bloque ENDIF PUNTOCOMA  (42)
	sentencia_if_error : IF . condicion PARENTESISC bloque ELSE bloque ENDIF PUNTOCOMA  (43)
	sentencia_if_error : IF . PARENTESISA condicion bloque ELSE bloque ENDIF PUNTOCOMA  (44)
	sentencia_if_error : IF . condicion bloque ELSE bloque ENDIF PUNTOCOMA  (45)
	sentencia_if_error : IF . PARENTESISA condicion PARENTESISC ENDIF PUNTOCOMA  (48)
	sentencia_if_error : IF . PARENTESISA condicion PARENTESISC ELSE bloque ENDIF PUNTOCOMA  (49)
	sentencia_if_error : IF . PARENTESISA condicion PARENTESISC ELSE ENDIF PUNTOCOMA  (51)
	sentencia_if_error : IF . condicion PARENTESISC bloque ENDIF  (54)
	sentencia_if_error : IF . PARENTESISA condicion bloque ENDIF  (55)
	sentencia_if_error : IF . condicion bloque ENDIF  (56)
	sentencia_if_error : IF . condicion PARENTESISC bloque ELSE bloque ENDIF  (57)
	sentencia_if_error : IF . PARENTESISA condicion bloque ELSE bloque ENDIF  (58)
	sentencia_if_error : IF . condicion bloque ELSE bloque ENDIF  (59)
	sentencia_if_error : IF . PARENTESISA condicion PARENTESISC ENDIF  (62)
	sentencia_if_error : IF . PARENTESISA condicion PARENTESISC ELSE bloque ENDIF  (63)
	sentencia_if_error : IF . PARENTESISA condicion PARENTESISC ELSE ENDIF  (65)

	CTE  shift 37
	ID  shift 38
	MENOS  shift 39
	MAYIG  shift 40
	MENIG  shift 41
	MAYOR  shift 42
	MENOR  shift 43
	IGIG  shift 44
	DIF  shift 45
	PARENTESISA  shift 46
	.  error

	expresiones  goto 47
	condicion  goto 48
	condicion_error  goto 49
	identificador  goto 50
	termino  goto 51
	tipo_cte  goto 52
	llamado_funcion  goto 53


state 7
	sentencia_print : PRINT . PARENTESISA CADENA PARENTESISC PUNTOCOMA  (21)
	sentencia_print : PRINT . PARENTESISA expresiones PARENTESISC PUNTOCOMA  (22)
	sentencia_print_error : PRINT . PARENTESISA CADENA PARENTESISC  (24)
	sentencia_print_error : PRINT . PARENTESISA expresiones PARENTESISC  (25)
	sentencia_print_error : PRINT . PARENTESISA PARENTESISC PUNTOCOMA  (26)
	sentencia_print_error : PRINT . PARENTESISA PARENTESISC  (27)

	PARENTESISA  shift 54
	.  error


state 8
	sentencia_return : RETURN . PARENTESISA lista_id PARENTESISC PUNTOCOMA  (17)
	sentencia_return : RETURN . PARENTESISA expresiones PARENTESISC PUNTOCOMA  (18)
	sentencia_return : RETURN . PARENTESISA lista_id PARENTESISC  (19)
	sentencia_return : RETURN . PARENTESISA expresiones PARENTESISC  (20)

	PARENTESISA  shift 55
	.  error


state 9
	tipo : ULONG .  (142)

	.  reduce 142


state 10
	header_while : WHILE . PARENTESISA condicion PARENTESISC  (30)
	sentencia_while_error : WHILE . condicion PARENTESISC DO bloque PUNTOCOMA  (31)
	sentencia_while_error : WHILE . PARENTESISA condicion DO bloque PUNTOCOMA  (32)
	sentencia_while_error : WHILE . condicion DO bloque PUNTOCOMA  (33)

	CTE  shift 37
	ID  shift 38
	MENOS  shift 39
	MAYIG  shift 40
	MENIG  shift 41
	MAYOR  shift 42
	MENOR  shift 43
	IGIG  shift 44
	DIF  shift 45
	PARENTESISA  shift 56
	.  error

	expresiones  goto 47
	condicion  goto 57
	condicion_error  goto 49
	identificador  goto 50
	termino  goto 51
	tipo_cte  goto 52
	llamado_funcion  goto 53


state 11
	identificador : ID .  (140)
	identificador : ID . PUNTO ID  (141)

	PUNTO  shift 58
	error  reduce 140
	ULONG  reduce 140
	ID  reduce 140
	CVR  reduce 140
	ASIGN  reduce 140
	IGUAL  reduce 140
	PARENTESISC  reduce 140
	PUNTOCOMA  reduce 140
	COMA  reduce 140


state 12
	expresion_lambda : PARENTESISA . tipo ID PARENTESISC bloque PARENTESISA identificador PARENTESISC  (130)
	expresion_lambda : PARENTESISA . tipo ID PARENTESISC bloque PARENTESISA tipo_cte PARENTESISC  (131)

	ULONG  shift 9
	.  error

	tipo  goto 59


state 13
	bloque : error sentencias . LLAVEC  (5)
	bloque : error sentencias . error  (6)
	sentencias : sentencias . sentencia  (7)

	error  shift 60
	IF  shift 6
	PRINT  shift 7
	RETURN  shift 8
	ULONG  shift 9
	WHILE  shift 10
	ID  shift 11
	PARENTESISA  shift 12
	LLAVEC  shift 61
	.  error

	sentencia  goto 62
	sentencia_declarativa  goto 15
	sentencia_ejecutable  goto 16
	asignacion  goto 17
	sentencia_return  goto 18
	sentencia_print  goto 19
	sentencia_if  goto 20
	sentencia_while  goto 21
	expresion_lambda  goto 22
	lista_id  goto 23
	sentencia_print_error  goto 24
	header_while  goto 25
	sentencia_while_error  goto 26
	header_if  goto 27
	sentencia_if_error  goto 28
	tipo  goto 29
	identificador  goto 30
	asignacion_error  goto 31
	funcion  goto 32
	header_funcion  goto 33
	lista_id_error  goto 34


state 14
	sentencias : sentencia .  (8)

	.  reduce 8


state 15
	sentencia : sentencia_declarativa .  (9)

	.  reduce 9


state 16
	sentencia : sentencia_ejecutable .  (10)

	.  reduce 10


state 17
	sentencia_ejecutable : asignacion .  (11)

	.  reduce 11


state 18
	sentencia_ejecutable : sentencia_return .  (12)

	.  reduce 12


state 19
	sentencia_ejecutable : sentencia_print .  (13)

	.  reduce 13


state 20
	sentencia_ejecutable : sentencia_if .  (14)

	.  reduce 14


state 21
	sentencia_ejecutable : sentencia_while .  (15)

	.  reduce 15


state 22
	sentencia_ejecutable : expresion_lambda .  (16)

	.  reduce 16


state 23
	asignacion : lista_id . IGUAL lista_cte PUNTOCOMA  (88)
	asignacion_error : lista_id . IGUAL lista_cte  (93)
	lista_id : lista_id . COMA identificador  (132)
	lista_id_error : lista_id . identificador  (135)

	ID  shift 11
	IGUAL  shift 63
	COMA  shift 64
	.  error

	identificador  goto 65


state 24
	sentencia_print : sentencia_print_error .  (23)

	.  reduce 23


state 25
	sentencia_while : header_while . DO bloque PUNTOCOMA  (28)
	sentencia_while_error : header_while . bloque PUNTOCOMA  (34)
	sentencia_while_error : header_while . DO PUNTOCOMA  (35)

	error  shift 1
	DO  shift 66
	LLAVEA  shift 3
	.  error

	bloque  goto 67


state 26
	sentencia_while : sentencia_while_error .  (29)

	.  reduce 29


state 27
	sentencia_if : header_if . ELSE bloque ENDIF PUNTOCOMA  (36)
	sentencia_if : header_if . ENDIF PUNTOCOMA  (37)
	sentencia_if_error : header_if . PUNTOCOMA  (46)
	sentencia_if_error : header_if . ELSE bloque PUNTOCOMA  (47)
	sentencia_if_error : header_if . ELSE ENDIF PUNTOCOMA  (50)
	sentencia_if_error : header_if . ELSE bloque ENDIF  (52)
	sentencia_if_error : header_if . ENDIF  (53)
	sentencia_if_error : header_if .  (60)
	sentencia_if_error : header_if . ELSE bloque  (61)
	sentencia_if_error : header_if . ELSE ENDIF  (64)

	ELSE  shift 68
	ENDIF  shift 69
	PUNTOCOMA  shift 70
	error  reduce 60
	IF  reduce 60
	PRINT  reduce 60
	RETURN  reduce 60
	ULONG  reduce 60
	WHILE  reduce 60
	ID  reduce 60
	PARENTESISA  reduce 60
	LLAVEC  reduce 60


state 28
	sentencia_if : sentencia_if_error .  (38)

	.  reduce 38


state 29
	asignacion : tipo . ID ASIGN expresiones PUNTOCOMA  (86)
	asignacion_error : tipo . ID ASIGN expresiones  (91)
	sentencia_declarativa : tipo . ID PUNTOCOMA  (109)
	sentencia_declarativa : tipo . lista_id PUNTOCOMA  (110)
	sentencia_declarativa : tipo . ID error  (112)
	sentencia_declarativa : tipo . lista_id error  (113)
	header_funcion : tipo . ID PARENTESISA parametros_formales PARENTESISC  (115)
	header_funcion : tipo . PARENTESISA parametros_formales PARENTESISC  (116)

	ID  shift 71
	PARENTESISA  shift 72
	.  error

	lista_id  goto 73
	identificador  goto 74
	lista_id_error  goto 34


state 30
	asignacion : identificador . ASIGN expresiones PUNTOCOMA  (87)
	asignacion : identificador . IGUAL lista_cte PUNTOCOMA  (89)
	asignacion_error : identificador . ASIGN expresiones  (92)
	asignacion_error : identificador . IGUAL lista_cte  (94)
	lista_id : identificador . COMA identificador  (133)
	lista_id_error : identificador . identificador  (136)

	ID  shift 11
	ASIGN  shift 75
	IGUAL  shift 76
	COMA  shift 77
	.  error

	identificador  goto 78


state 31
	asignacion : asignacion_error .  (90)

	.  reduce 90


state 32
	sentencia_declarativa : funcion .  (111)

	.  reduce 111


state 33
	funcion : header_funcion . bloque  (114)

	error  shift 1
	LLAVEA  shift 3
	.  error

	bloque  goto 79


state 34
	lista_id : lista_id_error .  (134)

	.  reduce 134


state 35
	prog : ID bloque .  (1)

	.  reduce 1


state 36
	bloque : LLAVEA sentencias . LLAVEC  (3)
	bloque : LLAVEA sentencias . error  (4)
	sentencias : sentencias . sentencia  (7)

	error  shift 80
	IF  shift 6
	PRINT  shift 7
	RETURN  shift 8
	ULONG  shift 9
	WHILE  shift 10
	ID  shift 11
	PARENTESISA  shift 12
	LLAVEC  shift 81
	.  error

	sentencia  goto 62
	sentencia_declarativa  goto 15
	sentencia_ejecutable  goto 16
	asignacion  goto 17
	sentencia_return  goto 18
	sentencia_print  goto 19
	sentencia_if  goto 20
	sentencia_while  goto 21
	expresion_lambda  goto 22
	lista_id  goto 23
	sentencia_print_error  goto 24
	header_while  goto 25
	sentencia_while_error  goto 26
	header_if  goto 27
	sentencia_if_error  goto 28
	tipo  goto 29
	identificador  goto 30
	asignacion_error  goto 31
	funcion  goto 32
	header_funcion  goto 33
	lista_id_error  goto 34


state 37
	tipo_cte : CTE .  (143)

	.  reduce 143


38: shift/reduce conflict (shift 82, reduce 140) on PARENTESISA
state 38
	llamado_funcion : ID . PARENTESISA parametros_reales PARENTESISC  (104)
	identificador : ID .  (140)
	identificador : ID . PUNTO ID  (141)

	PARENTESISA  shift 82
	PUNTO  shift 58
	error  reduce 140
	IF  reduce 140
	PRINT  reduce 140
	RETURN  reduce 140
	ULONG  reduce 140
	WHILE  reduce 140
	DO  reduce 140
	ID  reduce 140
	MAS  reduce 140
	MENOS  reduce 140
	AST  reduce 140
	BARRA  reduce 140
	MAYIG  reduce 140
	MENIG  reduce 140
	MAYOR  reduce 140
	MENOR  reduce 140
	IGIG  reduce 140
	DIF  reduce 140
	PARENTESISC  reduce 140
	LLAVEA  reduce 140
	LLAVEC  reduce 140
	PUNTOCOMA  reduce 140
	FLECHA  reduce 140
	COMA  reduce 140


state 39
	tipo_cte : MENOS . CTE  (144)

	CTE  shift 83
	.  error


state 40
	condicion_error : MAYIG . expresiones  (80)

	CTE  shift 37
	ID  shift 38
	MENOS  shift 39
	.  error

	expresiones  goto 84
	identificador  goto 50
	termino  goto 51
	tipo_cte  goto 52
	llamado_funcion  goto 53


state 41
	condicion_error : MENIG . expresiones  (82)

	CTE  shift 37
	ID  shift 38
	MENOS  shift 39
	.  error

	expresiones  goto 85
	identificador  goto 50
	termino  goto 51
	tipo_cte  goto 52
	llamado_funcion  goto 53


state 42
	condicion_error : MAYOR . expresiones  (79)

	CTE  shift 37
	ID  shift 38
	MENOS  shift 39
	.  error

	expresiones  goto 86
	identificador  goto 50
	termino  goto 51
	tipo_cte  goto 52
	llamado_funcion  goto 53


state 43
	condicion_error : MENOR . expresiones  (81)

	CTE  shift 37
	ID  shift 38
	MENOS  shift 39
	.  error

	expresiones  goto 87
	identificador  goto 50
	termino  goto 51
	tipo_cte  goto 52
	llamado_funcion  goto 53


state 44
	condicion_error : IGIG . expresiones  (83)

	CTE  shift 37
	ID  shift 38
	MENOS  shift 39
	.  error

	expresiones  goto 88
	identificador  goto 50
	termino  goto 51
	tipo_cte  goto 52
	llamado_funcion  goto 53


state 45
	condicion_error : DIF . expresiones  (84)

	CTE  shift 37
	ID  shift 38
	MENOS  shift 39
	.  error

	expresiones  goto 89
	identificador  goto 50
	termino  goto 51
	tipo_cte  goto 52
	llamado_funcion  goto 53


state 46
	header_if : IF PARENTESISA . condicion PARENTESISC bloque  (39)
	sentencia_if_error : IF PARENTESISA . condicion bloque ENDIF PUNTOCOMA  (41)
	sentencia_if_error : IF PARENTESISA . condicion bloque ELSE bloque ENDIF PUNTOCOMA  (44)
	sentencia_if_error : IF PARENTESISA . condicion PARENTESISC ENDIF PUNTOCOMA  (48)
	sentencia_if_error : IF PARENTESISA . condicion PARENTESISC ELSE bloque ENDIF PUNTOCOMA  (49)
	sentencia_if_error : IF PARENTESISA . condicion PARENTESISC ELSE ENDIF PUNTOCOMA  (51)
	sentencia_if_error : IF PARENTESISA . condicion bloque ENDIF  (55)
	sentencia_if_error : IF PARENTESISA . condicion bloque ELSE bloque ENDIF  (58)
	sentencia_if_error : IF PARENTESISA . condicion PARENTESISC ENDIF  (62)
	sentencia_if_error : IF PARENTESISA . condicion PARENTESISC ELSE bloque ENDIF  (63)
	sentencia_if_error : IF PARENTESISA . condicion PARENTESISC ELSE ENDIF  (65)

	CTE  shift 37
	ID  shift 38
	MENOS  shift 39
	MAYIG  shift 40
	MENIG  shift 41
	MAYOR  shift 42
	MENOR  shift 43
	IGIG  shift 44
	DIF  shift 45
	.  error

	expresiones  goto 47
	condicion  goto 90
	condicion_error  goto 49
	identificador  goto 50
	termino  goto 51
	tipo_cte  goto 52
	llamado_funcion  goto 53


state 47
	condicion : expresiones . MAYOR expresiones  (66)
	condicion : expresiones . MAYIG expresiones  (67)
	condicion : expresiones . MENOR expresiones  (68)
	condicion : expresiones . MENIG expresiones  (69)
	condicion : expresiones . IGIG expresiones  (70)
	condicion : expresiones . DIF expresiones  (71)
	condicion_error : expresiones . MAYOR  (73)
	condicion_error : expresiones . MAYIG  (74)
	condicion_error : expresiones . MENOR  (75)
	condicion_error : expresiones . MENIG  (76)
	condicion_error : expresiones . IGIG  (77)
	condicion_error : expresiones . DIF  (78)
	condicion_error : expresiones .  (85)
	expresiones : expresiones . MAS termino  (95)
	expresiones : expresiones . MENOS termino  (96)
	expresiones : expresiones . AST termino  (97)
	expresiones : expresiones . BARRA termino  (98)
	expresiones : expresiones . operador error  (100)

	MAS  shift 91
	MENOS  shift 92
	AST  shift 93
	BARRA  shift 94
	MAYIG  shift 95
	MENIG  shift 96
	MAYOR  shift 97
	MENOR  shift 98
	IGIG  shift 99
	DIF  shift 100
	error  reduce 85
	DO  reduce 85
	PARENTESISC  reduce 85
	LLAVEA  reduce 85

	operador  goto 101


state 48
	sentencia_if_error : IF condicion . PARENTESISC bloque ENDIF PUNTOCOMA  (40)
	sentencia_if_error : IF condicion . bloque ENDIF PUNTOCOMA  (42)
	sentencia_if_error : IF condicion . PARENTESISC bloque ELSE bloque ENDIF PUNTOCOMA  (43)
	sentencia_if_error : IF condicion . bloque ELSE bloque ENDIF PUNTOCOMA  (45)
	sentencia_if_error : IF condicion . PARENTESISC bloque ENDIF  (54)
	sentencia_if_error : IF condicion . bloque ENDIF  (56)
	sentencia_if_error : IF condicion . PARENTESISC bloque ELSE bloque ENDIF  (57)
	sentencia_if_error : IF condicion . bloque ELSE bloque ENDIF  (59)

	error  shift 1
	PARENTESISC  shift 102
	LLAVEA  shift 3
	.  error

	bloque  goto 103


state 49
	condicion : condicion_error .  (72)

	.  reduce 72


state 50
	termino : identificador .  (101)

	.  reduce 101


state 51
	expresiones : termino .  (99)

	.  reduce 99


state 52
	termino : tipo_cte .  (102)

	.  reduce 102


state 53
	termino : llamado_funcion .  (103)

	.  reduce 103


state 54
	sentencia_print : PRINT PARENTESISA . CADENA PARENTESISC PUNTOCOMA  (21)
	sentencia_print : PRINT PARENTESISA . expresiones PARENTESISC PUNTOCOMA  (22)
	sentencia_print_error : PRINT PARENTESISA . CADENA PARENTESISC  (24)
	sentencia_print_error : PRINT PARENTESISA . expresiones PARENTESISC  (25)
	sentencia_print_error : PRINT PARENTESISA . PARENTESISC PUNTOCOMA  (26)
	sentencia_print_error : PRINT PARENTESISA . PARENTESISC  (27)

	CTE  shift 37
	CADENA  shift 104
	ID  shift 38
	MENOS  shift 39
	PARENTESISC  shift 105
	.  error

	expresiones  goto 106
	identificador  goto 50
	termino  goto 51
	tipo_cte  goto 52
	llamado_funcion  goto 53


state 55
	sentencia_return : RETURN PARENTESISA . lista_id PARENTESISC PUNTOCOMA  (17)
	sentencia_return : RETURN PARENTESISA . expresiones PARENTESISC PUNTOCOMA  (18)
	sentencia_return : RETURN PARENTESISA . lista_id PARENTESISC  (19)
	sentencia_return : RETURN PARENTESISA . expresiones PARENTESISC  (20)

	CTE  shift 37
	ID  shift 38
	MENOS  shift 39
	.  error

	lista_id  goto 107
	expresiones  goto 108
	identificador  goto 109
	termino  goto 51
	tipo_cte  goto 52
	llamado_funcion  goto 53
	lista_id_error  goto 34


state 56
	header_while : WHILE PARENTESISA . condicion PARENTESISC  (30)
	sentencia_while_error : WHILE PARENTESISA . condicion DO bloque PUNTOCOMA  (32)

	CTE  shift 37
	ID  shift 38
	MENOS  shift 39
	MAYIG  shift 40
	MENIG  shift 41
	MAYOR  shift 42
	MENOR  shift 43
	IGIG  shift 44
	DIF  shift 45
	.  error

	expresiones  goto 47
	condicion  goto 110
	condicion_error  goto 49
	identificador  goto 50
	termino  goto 51
	tipo_cte  goto 52
	llamado_funcion  goto 53


state 57
	sentencia_while_error : WHILE condicion . PARENTESISC DO bloque PUNTOCOMA  (31)
	sentencia_while_error : WHILE condicion . DO bloque PUNTOCOMA  (33)

	DO  shift 111
	PARENTESISC  shift 112
	.  error


state 58
	identificador : ID PUNTO . ID  (141)

	ID  shift 113
	.  error


state 59
	expresion_lambda : PARENTESISA tipo . ID PARENTESISC bloque PARENTESISA identificador PARENTESISC  (130)
	expresion_lambda : PARENTESISA tipo . ID PARENTESISC bloque PARENTESISA tipo_cte PARENTESISC  (131)

	ID  shift 114
	.  error


state 60
	bloque : error sentencias error .  (6)

	.  reduce 6


state 61
	bloque : error sentencias LLAVEC .  (5)

	.  reduce 5


state 62
	sentencias : sentencias sentencia .  (7)

	.  reduce 7


state 63
	asignacion : lista_id IGUAL . lista_cte PUNTOCOMA  (88)
	asignacion_error : lista_id IGUAL . lista_cte  (93)

	CTE  shift 37
	MENOS  shift 39
	.  error

	lista_cte  goto 115
	tipo_cte  goto 116


state 64
	lista_id : lista_id COMA . identificador  (132)

	ID  shift 11
	.  error

	identificador  goto 117


state 65
	lista_id_error : lista_id identificador .  (135)

	.  reduce 135


state 66
	sentencia_while : header_while DO . bloque PUNTOCOMA  (28)
	sentencia_while_error : header_while DO . PUNTOCOMA  (35)

	error  shift 1
	LLAVEA  shift 3
	PUNTOCOMA  shift 118
	.  error

	bloque  goto 119


state 67
	sentencia_while_error : header_while bloque . PUNTOCOMA  (34)

	PUNTOCOMA  shift 120
	.  error


state 68
	sentencia_if : header_if ELSE . bloque ENDIF PUNTOCOMA  (36)
	sentencia_if_error : header_if ELSE . bloque PUNTOCOMA  (47)
	sentencia_if_error : header_if ELSE . ENDIF PUNTOCOMA  (50)
	sentencia_if_error : header_if ELSE . bloque ENDIF  (52)
	sentencia_if_error : header_if ELSE . bloque  (61)
	sentencia_if_error : header_if ELSE . ENDIF  (64)

	error  shift 1
	ENDIF  shift 121
	LLAVEA  shift 3
	.  error

	bloque  goto 122


state 69
	sentencia_if : header_if ENDIF . PUNTOCOMA  (37)
	sentencia_if_error : header_if ENDIF .  (53)

	PUNTOCOMA  shift 123
	error  reduce 53
	IF  reduce 53
	PRINT  reduce 53
	RETURN  reduce 53
	ULONG  reduce 53
	WHILE  reduce 53
	ID  reduce 53
	PARENTESISA  reduce 53
	LLAVEC  reduce 53


state 70
	sentencia_if_error : header_if PUNTOCOMA .  (46)

	.  reduce 46


state 71
	asignacion : tipo ID . ASIGN expresiones PUNTOCOMA  (86)
	asignacion_error : tipo ID . ASIGN expresiones  (91)
	sentencia_declarativa : tipo ID . PUNTOCOMA  (109)
	sentencia_declarativa : tipo ID . error  (112)
	header_funcion : tipo ID . PARENTESISA parametros_formales PARENTESISC  (115)
	identificador : ID .  (140)
	identificador : ID . PUNTO ID  (141)

	error  shift 124
	ASIGN  shift 125
	PARENTESISA  shift 126
	PUNTOCOMA  shift 127
	PUNTO  shift 58
	ID  reduce 140
	COMA  reduce 140


state 72
	header_funcion : tipo PARENTESISA . parametros_formales PARENTESISC  (116)

	error  shift 128
	ULONG  shift 9
	CVR  shift 129
	.  error

	tipo  goto 130
	parametros_formales  goto 131
	parametro_formal  goto 132
	parametro_formal_error  goto 133

